fix header spacing

--- a/_patterns/footer/footer.css
+++ b/_patterns/footer/footer.css
@@ -50,4 +50,8 @@
     text-align: center;
   }
 
+  .social li {
+    width: 24%;
+  }
+
 }
